[package]
name = "demod_fm"
version = "1.0.1"
authors = ["Mick Koch <mick@kochm.co>", "Mark Tomlin <Dygear@gmail.com>"]
description = "FM signal demodulator"
license = "MIT"
documentation = "https://docs.rs/demod_fm"
repository = "https://github.com/Dygear/demod_fm.rs"
keywords = ["dsp", "fm", "demodulate", "signal"]

[dependencies]
num = "^0.4.0"
